fixing overlaps in skills and stacks section of home

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ display: block;
 .mainforhome {
  display: grid;
  grid-template-columns: 900px 1fr;
- grid-template-rows:600px 800px ;
+ grid-template-rows:600px 900px ;
 
 }
 
